--- a/structure/templates/addticket.html
+++ b/structure/templates/addticket.html
@@ -13,7 +13,7 @@
             <div class="col-md-10">
                 <div class="text-center bg-info p-2 h4">Add a product</div>
                 {% from "_formhelpers.html" import render_field %}
-                <form method="post" action="{{ url_for('admins.addticket') }}" enctype="multipart/form-data">
+                <form method="post" action="" enctype="multipart/form-data">
                 <div>
                     {{ render_field(form.name, class="form-control") }}
                     {{ render_field(form.price, class="form-control") }}
@@ -21,8 +21,8 @@
                     {{ render_field(form.date, class="form-control") }}
                     <label for="genre">Pick a genre</label>
                     <select name="genre" id="genre" class="form-control" required>
-                        {% if getproduct %}
-                        <option value="{{getproduct.genre_id}}" style="display: none;">{{getproduct.genre.name}}</option>
+                        {% if getticket %}
+                        <option value="{{getticket.genre}}" style="display: none;">{{getticket.genre.name}}</option>
                         {% for genre in genres %}
                         <option value="{{genre.id}}">{{genre.name}}</option>
                         {% endfor %}
@@ -41,9 +41,9 @@
                 </div>
                 <div class="container">
                     <div class="row">
-                        {% if getproduct %}
+                        {% if getticket %}
                         <div class="col-md-4"> <input type="file" name="image_1" id="image_1">
-                            <a href="{{url_for('static',filename='images/' + getproduct.image_1)}}"> images/{{ getproduct.image_1}}</a>
+                            <a href="{{url_for('static',filename='images/' + getticket.image_1)}}"> images/{{ getticket.image_1}}</a>
                         </div>
                       
                       
