--- a/structure/templates/index.html
+++ b/structure/templates/index.html
@@ -276,8 +276,9 @@
                 <table class="table align-items-center mb-0">
                   <thead>
                     <tr>
-                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Feature</th>
-                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Function</th>
+                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Title</th>
+                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Price</th>
+                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Description</th>
                    
                       <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Actions</th>
                       <th class="text-secondary opacity-7"></th>
@@ -295,67 +296,28 @@
                       </div>
                     </td>
                     <td>
-                      <p class="text-xs font-weight-bold mb-0">{{ ticket.description }}</p>
+                      <p class="text-xs font-weight-bold mb-0">{{ ticket.price }}</p>
                     </td>
-                 
+                    <td>
+                      <p class="text-xs font-weight-bold mb-0">{{ ticket.description[:50] }}...</p>
+                    </td>
+                    
                     <td class="align-middle">
                       <a href="javascript:;" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
-                        <a href="#" class="btn btn-primary">Edit Feature</a>
+                        <a href="{{ url_for('admins.updateticket',ticket_id=ticket.id) }}" class="btn btn-primary">Edit Feature</a> 
                         
-                        <button data-toggle="modal" data-target="#deletetick   {% for ticket in tickets %}
-                    <tr>
-                      <td>
-                        <div class="d-flex px-2 py-1">
-                         
-                          <div class="d-flex flex-column justify-content-center">
-                            <h6 class="mb-0 text-sm">{{ticket.name}}</h6>
-                          </div>
-                        </div>
-                      </td>
-                      <td>
-                        <p class="text-xs font-weight-bold mb-0">{{ ticket.description }}</p>
-                      </td>
-                   
-                      <td class="align-middle">
-                        <a href="javascript:;" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
-                          <a href="#" class="btn btn-primary">Edit Feature</a>
-                          
-                          <button data-toggle="modal" data-target="#"  class="btn btn-danger"><i class="fa fa-edit"></i>Delete</button>
-                          <div class="modal fade" id="d" tabindex="-1" role="dialog" aria-labelledby="edittestimonial" aria-hidden="true">
-                            <div class="modal-dialog modal-dialog-centered" role="document">
-                              <div class="modal-content">
-                                <div class="modal-header">
-                                  <h5 class="modal-title" id="#">Modal title</h5>
-                                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                  </button>
-                                </div>
-                                <div class="modal-body">
-                                  <form action="#"
-                                  >
-                                    <input class='btn btn-danger' type="submit" value="Delete">
-                                    </div>
-                                  </form>
-                                </div> 
-                              </div>
-                            </div>
-                            </div>
-                      </td>
-                    </tr>
-                    <tr>
-                      {% endfor %}
-                      et{{ticket.id}}"  class="btn btn-danger"><i class="fa fa-edit"></i>Delete</button>
-                        <div class="modal fade" id="" tabindex="-1" role="dialog" aria-labelledby="edittestimonial" aria-hidden="true">
+                        <button data-toggle="modal" data-target="#deleteticket{{ticket.id}}"  class="btn btn-danger"><i class="fa fa-edit"></i>Delete</button>
+                        <div class="modal fade" id="deleteticket{{ticket.id}}" tabindex="-1" role="dialog" aria-labelledby="edittestimonial" aria-hidden="true">
                           <div class="modal-dialog modal-dialog-centered" role="document">
                             <div class="modal-content">
                               <div class="modal-header">
-                                <h5 class="modal-title" id="">Modal title</h5>
+                                <h5 class="modal-title" id="deleteticket{{ticket.id}}">Modal title</h5>
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                   <span aria-hidden="true">&times;</span>
                                 </button>
                               </div>
                               <div class="modal-body">
-                                <form action="#"
+                                <form action="{{ url_for('admins.delete_ticket', ticket_id=ticket.id) }}"
                                 >
                                   <input class='btn btn-danger' type="submit" value="Delete">
                                   </div>
