--- a/structure/templates/index.html
+++ b/structure/templates/index.html
@@ -269,7 +269,7 @@
               </div>
             </div>
             <!--<a href="#" class="btn btn-primary btn-sm" style="float:right; vertical-align: top;">Add features</a>-->
-            <a href="{{url_for('admins.addticket')}} " class="btn btn-primary btn-sm" style="float:right; vertical-align: top;">Add features</a>
+            <a href="{{url_for('admins.addticket')}} " class="btn btn-primary btn-sm" style="float:right; vertical-align: top;">Add Ticket</a>
 
             <div class="card-body px-0 pt-0 pb-2">
               <div class="table-responsive p-0">
