--- a/structure/templates/index.html
+++ b/structure/templates/index.html
@@ -270,7 +270,9 @@
             </div>
             <!--<a href="#" class="btn btn-primary btn-sm" style="float:right; vertical-align: top;">Add features</a>-->
             <a href="{{url_for('admins.addticket')}} " class="btn btn-primary btn-sm" style="float:right; vertical-align: top;">Add Ticket</a>
-
+            {% for ticket in tickets %}
+            <a href="{{ url_for('core.addorder',ticket_id=ticket.id) }}" class="btn btn-primary btn-sm" style="float:right; vertical-align: top;">Add Ticket</a>
+            {% endfor %}
             <div class="card-body px-0 pt-0 pb-2">
               <div class="table-responsive p-0">
                 <table class="table align-items-center mb-0">
