--- a/structure/templates/updateorder.html
+++ b/structure/templates/updateorder.html
@@ -104,8 +104,11 @@ cghjknlm;
                     {{ render_field(form.quantity, class="form-control") }}
                     {{ render_field(form.time, class="form-control") }}
                     {{ render_field(form.date, class="form-control") }}
-                    {{ render_field(form.coupon, class="form-control") }}
+                    {{ render_field(form.refund_request, class="form-control") }}
+                    {{ render_field(form.refund_reason, class="form-control") }}
 
+
+                
                     
                   
                
