--- a/structure/templates/index.html
+++ b/structure/templates/index.html
@@ -388,7 +388,7 @@
                 <div class="d-flex px-2 py-1">
                  
                   <div class="d-flex flex-column justify-content-center">
-                    <h6 class="mb-0 text-sm">{{order.ticket}}</h6>
+                    <h6 class="mb-0 text-sm">{{order.ticket.name}}</h6>
              
                   </div>
                 </div>
