--- a/structure/templates/order.html
+++ b/structure/templates/order.html
@@ -49,13 +49,13 @@ Licence URI: https://www.os-templates.com/template-terms
 </div>
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
+<!-- ################################################################################################
 <div class="wrapper bgded overlay gradient" style="background-image:url('images/demo/backgrounds/01.png');">
-  <div id="pageintro" class="hoc clear"> 
-    <!-- ################################################################################################ -->
+  <div id="pageintro" class="hoc clear"> -->
+    <!-- ################################################################################################ 
     <article>
       <h3 class="heading">SHINOBI CINEMAS</h3>
-      <p>A PERFECT CINEMA</p>
+      <p>A PERFECT CINEMA</p>-->
       <!--<footer>
         <ul class="nospace inline pushright">
           <li><a class="btn" href="#">Ultricies dui orci</a></li>
@@ -122,16 +122,5 @@ cghjknlm;
     </div>
 </div>
 
-{% for genre in genres%}
-{{genre.name}}
-{% endfor %}
 
-
-{{tid}}
-<br>
-{% for ticket in tickets%}
-{% if ticket.id == tid %}
-{{ticket.description}}
-{% endif %}
-{% endfor %}
 
