integrated movie api, changed index page

--- a/structure/templates/addticket.html
+++ b/structure/templates/addticket.html
@@ -36,6 +36,8 @@
                      {% endif %}
                     </select>
 
+                
+
                
 
                     {{ render_field(form.description, class="form-control", rows="10") }}
@@ -55,6 +57,7 @@
                     </div>
                 </div>
                 {{ render_field(form.status, class="form-control") }}
+                {{ render_field(form.display, class="form-control")}}
                 {{ render_field(form.showingdates , class="form-control") }}
 
 
